<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.stitch.cardmanagement.ui.StitchWidgetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPinLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_four_digit_pin"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:fontFamily="@font/inter_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPIN"
            style="@style/TextInputLayoutStyle.Filled"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPinLabel"
            app:styleTILColor="@{viewModel.cardStyleFontColor}"
            app:styleTILFontFamily="@{viewModel.cardStyleFontFamily}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPIN"
                style="@style/EditTextStyle.NoBorder"
                android:hint="@string/placeholder_enter_four_digit_pin"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:paddingTop="32dp"
                android:text="@={viewModel.pin}"
                android:textCursorDrawable="@null"
                app:styleFontColor="@{viewModel.cardStyleFontColor}"
                app:styleFontFamily="@{viewModel.cardStyleFontFamily}"
                app:styleFontSize="@{Integer.parseInt(viewModel.styleFontSize)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfirmPinLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/placeholder_set_confirm_pin"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:fontFamily="@font/inter_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPIN" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPIN"
            style="@style/TextInputLayoutStyle.Filled"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirmPinLabel"
            app:styleTILColor="@{viewModel.cardStyleFontColor}"
            app:styleTILFontFamily="@{viewModel.cardStyleFontFamily}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPIN"
                style="@style/EditTextStyle.NoBorder"
                android:hint="@string/placeholder_re_enter_four_digit_pin"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:paddingTop="32dp"
                android:text="@={viewModel.confirmPin}"
                android:textCursorDrawable="@null"
                app:styleFontColor="@{viewModel.cardStyleFontColor}"
                app:styleFontFamily="@{viewModel.cardStyleFontFamily}"
                app:styleFontSize="@{Integer.parseInt(viewModel.styleFontSize)}" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>