<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.stitch.cardmanagement.ui.CardManagementSDKViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCustomerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCustomerCardBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCustomerCardBgBack"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardStyleBackground="@{viewModel.cardStyleBackground}">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCardMediaBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:cardMedia="@{viewModel.cardMediaFile}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/grey"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/viewCustomerService"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorBase"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCustomerCardFront"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCustomerCardBgFront"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardStyleBackground="@{viewModel.cardStyleBackground}">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCardMediaFront"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:cardMedia="@{viewModel.cardMediaFile}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNameOnCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@={viewModel.nameOnCard}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/ivCardType"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:styleFontColor="@{viewModel.cardStyleFontColor}"
                    app:styleFontFamily="@{viewModel.cardStyleFontFamily}"
                    app:styleFontSize="@{Integer.parseInt(viewModel.styleFontSize)}" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCardType"
                    android:layout_width="96dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:scaleType="centerInside"
                    android:visibility="gone"
                    app:cardTypeImage="@{viewModel.cardTypeImage}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAccountNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/account_number"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvCardNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:styleFontColor="@{viewModel.cardStyleFontColor}"
                    app:styleFontFamily="@{viewModel.cardStyleFontFamily}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCardNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:onClick="@{()->viewModel.onShowMaskedCardNumberClick.invoke()}"
                    android:text="@{viewModel.isCardNumberMasked?viewModel.accountNumberBack:viewModel.accountNumber}"
                    android:textSize="14sp"
                    app:cardStyleBottomPadding="@{Integer.parseInt(viewModel.cardStyleNumberBottomPadding)}"
                    app:cardStyleLeftPadding="@{Integer.parseInt(viewModel.cardStyleNumberStartPadding)}"
                    app:cardStyleRightPadding="@{Integer.parseInt(viewModel.cardStyleNumberEndPadding)}"
                    app:cardStyleTopPadding="@{Integer.parseInt(viewModel.cardStyleNumberTopPadding)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:styleFontColor="@{viewModel.cardStyleFontColor}"
                    app:styleFontFamily="@{viewModel.cardStyleFontFamily}"
                    app:styleFontSize="@{Integer.parseInt(viewModel.styleFontSize)}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvExpiration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/expiration"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvCardExpiry"
                    app:layout_constraintEnd_toStartOf="@+id/tvCardCVV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:styleFontColor="@{viewModel.cardStyleFontColor}"
                    app:styleFontFamily="@{viewModel.cardStyleFontFamily}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCardExpiry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@={viewModel.cardExpiry}"
                    android:textSize="14sp"
                    app:cardStyleBottomPadding="@{Integer.parseInt(viewModel.cardStyleExpiryBottomPadding)}"
                    app:cardStyleLeftPadding="@{Integer.parseInt(viewModel.cardStyleExpiryStartPadding)}"
                    app:cardStyleRightPadding="@{Integer.parseInt(viewModel.cardStyleExpiryEndPadding)}"
                    app:cardStyleTopPadding="@{Integer.parseInt(viewModel.cardStyleExpiryTopPadding)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvCardCVV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:styleFontColor="@{viewModel.cardStyleFontColor}"
                    app:styleFontFamily="@{viewModel.cardStyleFontFamily}"
                    app:styleFontSize="@{Integer.parseInt(viewModel.styleFontSize)}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCVV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/cvv"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvCardCVV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCardExpiry"
                    app:styleFontColor="@{viewModel.cardStyleFontColor}"
                    app:styleFontFamily="@{viewModel.cardStyleFontFamily}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCardCVV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="@{()->viewModel.onShowMaskedCardCVVClick.invoke()}"
                    android:text="@{viewModel.isCardCVVMasked?viewModel.cardCVVBack:viewModel.cardCVV}"
                    android:textSize="14sp"
                    app:cardStyleBottomPadding="@{Integer.parseInt(viewModel.cardStyleCVVBottomPadding)}"
                    app:cardStyleLeftPadding="@{Integer.parseInt(viewModel.cardStyleCVVStartPadding)}"
                    app:cardStyleRightPadding="@{Integer.parseInt(viewModel.cardStyleCVVEndPadding)}"
                    app:cardStyleTopPadding="@{Integer.parseInt(viewModel.cardStyleCVVTopPadding)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCardExpiry"
                    app:styleFontColor="@{viewModel.cardStyleFontColor}"
                    app:styleFontFamily="@{viewModel.cardStyleFontFamily}"
                    app:styleFontSize="@{Integer.parseInt(viewModel.styleFontSize)}" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>